objects/Carousel_Tile__c/Carousel_Tile__c.object-meta.xml
<CustomObject>
    <description>This is back end control object for experience community interface navigation tiles.</description>
    <label>Community Carousel Tile</label>
    <nameField>
        <label>Carousel Tiles Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Carousel Tiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>