objects/Carousel_Tile__c/fields/Carousel__c.field-meta.xml
<CustomField>
    <fullName>Carousel__c</fullName>
    <label>Carousel</label>
    <referenceTo>Carousel__c</referenceTo>
    <relationshipName>Carousel_Tiles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>