objects/Carousel_Tile__c/fields/Tile_Content_Height__c.field-meta.xml
<CustomField>
    <fullName>Tile_Content_Height__c</fullName>
    <label>Tile Content Height</label>
    <length>255</length>
    <type>Text</type>
</CustomField>