objects/Carousel_Tile__c/fields/Tile_Font_Color__c.field-meta.xml
<CustomField>
    <fullName>Tile_Font_Color__c</fullName>
    <label>Tile Font Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>