objects/Carousel_Tile__c/fields/Tile_Image__c.field-meta.xml
<CustomField>
    <fullName>Tile_Image__c</fullName>
    <label>Tile Image</label>
    <type>Url</type>
</CustomField>