objects/Carousel_Tile__c/fields/Tile_Image_Height__c.field-meta.xml
<CustomField>
    <fullName>Tile_Image_Height__c</fullName>
    <label>Tile Image Height</label>
    <length>255</length>
    <type>Text</type>
</CustomField>