objects/Carousel_Tile__c/fields/Tile_Order__c.field-meta.xml
<CustomField>
    <fullName>Tile_Order__c</fullName>
    <label>Tile Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>