objects/Carousel_Tile__c/fields/Tile_Width__c.field-meta.xml
<CustomField>
    <fullName>Tile_Width__c</fullName>
    <label>Tile Width</label>
    <length>255</length>
    <type>Text</type>
</CustomField>